styles.css
/* GLOBAL */

@font-face {
    font-family: "Rubik";
    src: url(fonts/RubikDirt-Regular.ttf);
}

@font-face {
    font-family: "SpecialElite";
    src: url(fonts/SpecialElite-Regular.ttf);
}

body{
    margin: 0;
}

.links {
    padding-top: 0px;
    padding-bottom: 0px;
}

.links ul{
    display: flex;
    gap: 40px;
    list-style: none;
}

.links ul a {
    text-decoration: none;
    /* color: seagreen; */
    color: #98fb98;
    text-transform: uppercase;
    font-size: 17px;
    transition: all 0.5s ease-in-out;
    font-family: "SpecialElite";
    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
    line-height: 10px;
}

.links ul a:hover{
    color: skyblue;
    font-size: 20px;
}

.links ul li .current-page{
    color: gold;
    text-shadow: 2px 2px 4px rgba(0, 0, 0, 1);
    font-size: 20px;
}

header{
    background-color: rgba(0, 0, 0, 0.3);
}

header h1 {
    font-size: 100px;
    letter-spacing: 5px;
    font-family: "Rubik";
    color: #D99151;
    margin: 0px;
    padding-top: 10px;
    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
    margin-bottom: 0px;
}

header h3 {
    font-size: 20px;
    font-family: "SpecialElite";
    /* color: skyblue; */
}


/* INDEX */


#index-body{
    background-color: darkolivegreen;
    /* background-image: url(images/a-wild-ride-bg.jpeg); */
    background-image: url(https://images.pexels.com/photos/31000819/pexels-photo-31000819.jpeg);
    /* background-position: center; */
    background-repeat: no-repeat;
    background-size: cover;
    text-align: center;
    justify-content: center;
    margin: 0;
}

#index-body .links{
    display: flex;
    justify-content: center;
    text-align: center;
}

.quote-section{
    margin-top: 150px;
}

.quote-text{
    font-size: 35px;
    font-family: "SpecialElite";
    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
}

.quote-author{
    font-size: 20px;
    font-style: italic;
    font-family: "SpecialElite";
    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
}

/* Savannah */

#savannah-body{
    background-color: darkolivegreen;
    /* background-image: url(images/a-wild-ride-bg.jpeg); */
    background-image: url(https://images.pexels.com/photos/127909/pexels-photo-127909.jpeg);
    /* background-position: center; */
    background-repeat: no-repeat;
    background-size: cover;
    background-attachment: fixed;
}

#savannah-body header{
    text-align: center;
    justify-content: center;
    margin: 0;
}

#savannah-body .links{
    display: flex;
    justify-content: center;
    text-align: center;
}

.savannah-animals ul {
    display: flex;
    justify-content: center;
    list-style: none;
    gap: 50px 100px;
    flex-wrap: wrap;
    padding: 0;
}

.savannah-animals ul a{
    text-decoration: none;
}

.savannah-animals ul h3{
    text-align: center;
    font-family: "SpecialElite";
    color:azure;
}

.savannah-animals ul li:hover h3 {
    color: gold;
    transition: all ease-in-out 0.5s;
}

.savannah-animals ul li img{
    height: 200px;
    transition: all ease-in-out 0.7s;
    border-radius: 30px;
    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
}

.savannah-animals ul li img:hover{
    height: 250px;
    border-radius: 10px;
    box-shadow: 2px 2px 4px rgba(0, 0, 0, 1);
}

